# object-detection-tflite-cpp

./: .gitignore  CMakeLists.txt  README.md  compile.sh  copy_to_local.sh  freetype_renderer.h  image_classification.py  main.cxx  object_detection.h  object_detection.py  pull_compile.sh  run_ipcam.sh
hexagon/: README.md  tflite-hexagon_nn_skel_v1.20.0.1.run
hexagon/hexagon_nn_skel_v1.20.0.1/: CLICK_THROUGH_LICENSE.txt
models/coco_ssd_mobilenet_v1_1.0_quant_2018_06_29/: labels.txt
python_src/: object_detection.py  test_webcam.py
src/: freetype_renderer.h  main.cxx  object_detection.h
